--- a/syspriority/src/main/resources/templates/telaRecepcionista.html
+++ b/syspriority/src/main/resources/templates/telaRecepcionista.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="../static/css/cssCards.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
+        <article>
+            <p>Menu</p>
+        </article>
         <h1>SysPriority</h1>
+        <article>
+            <p>Recepcionista</p>
+        </article>
     </header>
     <main>
         <section id="cardAtendimento" class="card">
